frontend/ui/style.css
:root {
    --main-color: rgb(58, 77, 96);
    --main-color-transparent: rgb(58, 77, 96, .7);
    --text-input-box-color: rgb(60, 60, 60);
    --conversations-color: rgb(1, 47, 93);
    --text-hover-color: rgb(45, 60, 75);
}


body {
    color: white;
    margin: 0;
    border: 0; 
}

#header {
    background-color: rgb(53, 53, 53);
    color: aliceblue;
}

#main-window-wrapper {
    position: fixed;
    z-index: 1;
    height: 100vh;
    display: flex;
    background-color: var(--main-color);
    margin: 0;
    width: 100%;
    flex-direction:row;
}

.popupForm {
    position: fixed;
    height: 100%;
    width: 100%;
    background-color: var(--main-color);
    justify-content: center;
    align-items: center;
}

.popupForm > form {
    background-color: var(--conversations-color);
    display: flex;
    height: fit-content;
    width: fit-content;
    flex-direction: column;
    border-radius: 5px;
    border: 5px solid var(--conversations-color);
}

#login-form {
    display: flex;
    z-index: 42;
}

#login-form > form {
    display: flex;
}

#create-account-form {
    display: none;
    z-index: 42;
}

#create-account-form > form{
    display: flex;
}

#server-join-form {
    display: none;
    position: fixed;
    height: 100%;
    width: 100%;
    z-index: 5;
    background-color: var(--main-color-transparent);
    justify-content: center;
    align-items: center;
}

#form-wrapper {
    height: fit-content;
    width: fit-content;
    background-color: var(--conversations-color);
    padding: 10px;
    border-radius: 5px; 
}

#form-wrapper > form {
    display: flex;
    flex-direction: column;
}

input {
    border: 3px solid var(--text-input-box-color);
    margin: 10px;
    background-color: var(--text-input-box-color);
    border-radius: 5px;
    font-size: large;
}

button {
    line-height: 1;
    height: max-content;
    font-size: larger;
}


#server-nav {
    width: 5%;
    height: 100%;
    color: var(--conversations-color);
    display: flex;
    flex-direction: column;
}

body> div, form {
    height: 100%;
}

#left-pannel {
    float: left;
    width: 10%;
    position: relative;
    background-color: var(--conversations-color);
}

#control-pannel img {
    width: 50px;
    
    border-radius: 25px;

}

#control-pannel {
    position: absolute;
    bottom: 0;
    width: 150px;
}

#channel-list {
    width: 150px;
}

#channel-members {
    width: 200px;
    text-align: center;
    display: none;
    justify-content: flex-start;
    flex-direction: column;
    border: 10px;
    background-color: var(--conversations-color);
}


/*Main chat section*/
#convo {
    display: none;
    justify-content: end;
    flex-direction: column;
    height: 100%;
    width: 85%;
    position: relative;
}

#convo-chat-wrapper {
    max-height: 97%;
    overflow-y: scroll;
}

#convo-chat {
    padding-bottom: 5px;
    width: 100%;
    flex-grow: 1;
    display: flex;
    row-gap: 5px;
    justify-content: end;
    flex-direction: column;
}

#convo-chat>div {
    width: 100%;
    display: inline-block;
    word-wrap: break-word;
}

#convo-chat>div:hover{
    background-color: var(--text-hover-color);
}

#message-edit {
    flex-grow: 1;
    height: 30px;
    width: 100%;
}

#message-edit > input {
    bottom: 0;
    position: absolute;
    right: 5px;
    left: 5px;
    margin: 5px;
}

